--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav flex-column align-items-start">
           <li class="nav-item"><a class="nav-link" href="{% url 'characters' %}"><i
                 class="fa-solid fa-user me-2 text-gold"></i>Characters</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'party' %}">Party</a><i
+          <li class="nav-item"><a class="nav-link" href="{% url 'party' %}">Party><i
                 class="fa-solid fa-users me-2 text-gold"></i>Party</a></li>
           {% if user.is_authenticated %}
           <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><i
