found typo in line 88 on dm_party_characters.html

--- a/templates/dm_party_characters.html
+++ b/templates/dm_party_characters.html
@@ -85,7 +85,7 @@
                 <h4>Attributes</h4>
                 {% for attr in attr_list %}
                 <label class="mt-2 text-capitalize">{{ attr }}</label>
-                <input type="number" class="form-control" name="{{ attr }}" value="{{ c|getattr:attr }}">
+                <input type="number" class="form-control" name="{{ attr }}" value="{{ c|get_attr:attr }}">
                 {% endfor %}
               </div>
 
