--- a/templates/characters.html
+++ b/templates/characters.html
@@ -119,22 +119,22 @@
                 <label for="id_class_type" class="form-label">Class</label>
                 <select name="class_type" id="id_class_type" class="form-control">
                   <option value="">Select a class...</option>
-                  <option value="Fighter" {% if character.class_type="Fighter" %}selected{% endif %}>Fighter</option>
-                  <option value="Thief" {% if character.class_type="Thief" %}selected{% endif %}>Thief</option>
-                  <option value="Mage" {% if character.class_type="Mage" %}selected{% endif %}>Mage</option>
-                  <option value="Cleric" {% if character.class_type="Cleric" %}selected{% endif %}>Cleric</option>
+                  <option value="Fighter" {% if character.class_type=="Fighter" %}selected{% endif %}>Fighter</option>
+                  <option value="Thief" {% if character.class_type=="Thief" %}selected{% endif %}>Thief</option>
+                  <option value="Mage" {% if character.class_type=="Mage" %}selected{% endif %}>Mage</option>
+                  <option value="Cleric" {% if character.class_type=="Cleric" %}selected{% endif %}>Cleric</option>
                 </select>
               </div>
               <div class="mb-3">
                 <label for="id_race" class="form-label">Class</label>
                 <select name="race" id="race" class="form-control">
                   <option value="">Select a race...</option>
-                  <option value="Human" {% if character.class_type="Human" %}selected{% endif %}>Human</option>
-                  <option value="Dwarf" {% if character.class_type="Dwarf" %}selected{% endif %}>Dwarf</option>
-                  <option value="Elf" {% if character.class_type="Elf" %}selected{% endif %}>Elf</option>
-                  <option value="Orc" {% if character.class_type="Orc" %}selected{% endif %}>Orc</option>
-                  <option value="Gnome" {% if character.class_type="Gnome" %}selected{% endif %}>Gnome</option>
-                  <option value="Troll" {% if character.class_type="Troll" %}selected{% endif %}>Troll</option>
+                  <option value="Human" {% if character.class_type=="Human" %}selected{% endif %}>Human</option>
+                  <option value="Dwarf" {% if character.class_type=="Dwarf" %}selected{% endif %}>Dwarf</option>
+                  <option value="Elf" {% if character.class_type=="Elf" %}selected{% endif %}>Elf</option>
+                  <option value="Orc" {% if character.class_type=="Orc" %}selected{% endif %}>Orc</option>
+                  <option value="Gnome" {% if character.class_type=="Gnome" %}selected{% endif %}>Gnome</option>
+                  <option value="Troll" {% if character.class_type=="Troll" %}selected{% endif %}>Troll</option>
                 </select>
               </div>
               <div class="col-md-3">
