--- a/templates/characters.html
+++ b/templates/characters.html
@@ -98,6 +98,13 @@
         </section>
       </div>
 
+      <a href="https://www.dndbeyond.com/sources/dnd/phb-2024?srsltid=AfmBOoqGt4S_Gu8fWWWp2iEW-aFPsjENxz9xHxpLfETxWenmi0P2hovo"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="btn btn-gold w-100 mt-2">
+        Access the Official D&D Player’s Guide
+      </a>
+
       <!-- Character Form -->
       <div class="col-md-9">
         <form method="POST">
